# UNIQ_Library

./: CMakeLists.txt  CMakeSettings.json  README.md  UNIQ_library.jucer
Source/: main.cpp  system.cpp  system.h  system.hpp  test.cpp  test.h  timeline.cpp  timeline.h  timeline_cuepoint.cpp  timeline_cuepoint.h  unipack.cpp  unipack.h
Source/Console_test/: main.cpp  main2.cpp
Source/Launchpad/: launchpad.cpp  launchpad.h
module/audio/: CMakeLists.txt  README.md
module/audio/console_test/: main.cpp  main.h  test1.cpp  test2.cpp
module/audio/header/: audio.h
module/audio/source/: audio.cpp
module/core/: CMakeLists.txt  README.md  고민로그.md
module/core/console_test/: lock_test.cpp  main.cpp  main.h  test1.cpp  test2.cpp  test3.cpp
module/core/header/: core.h  core.hpp  lock.h  log.h
module/core/source/: core.cpp  lock.cpp  log.cpp
module/launchpad/: CMakeLists.txt  README.md
module/launchpad/console_test/: main.cpp  main.h  test1.cpp
module/launchpad/header/: launchpad.h
module/launchpad/source/: launchpad.cpp
module/workspace/: CMakeLists.txt
module/workspace/console_test/: main.cpp  main.h  workspace_test1.cpp
module/workspace/header/: workspace.h
module/workspace/source/: workspace.cpp
